# chat-hospital

./: .env  .gitignore  README.md  rough.ipynb  rough1.ipynb
chroma_data/fbef2fa1-c015-444f-97a5-8d3d8f5ebe66/: index_metadata.pickle
data-01/: data-02  testdata
hospital/: learning.txt
hospital/chatbot_api/: .pypirc  pyproject.toml
hospital/chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
hospital/chatbot_api/src/chatbot_api.egg-info/: PKG-INFO
hospital/hospital_neo4j_etl/src/: hospital_bulk_csv_write.py
hospital_neo4j_etl/src/: hospital_bulk_csv_write.py
langchain_intro/: chatbot.py  chatbot_V0.py  chatbot_V1.py  chatbot_V3.py  create_retriever.py  query_V1.py  query_V3.py  qurey.py  qurey_V0.py  qurey_similarity_search.py  requirements.txt  rough.py
langchain_intro/chroma_data/9546a8d2-981f-4dd6-8e00-6db0a00e2905/: index_metadata.pickle
